# FrequencyGeneratorControlSystem

./: Build with Make.md  CHANGELOG.md  CONTRIBUTING.md  HOW_TO_DOWNLOAD.md  INDEX.md  LICENSE.txt  README.md  README_FIRST.md  gitignore.txt
.github/: copilot-instructions.md
Desktop/: App.config  App.xaml  App.xaml.cs  FrequencyGeneratorApp.csproj  IMonitoringService.cs  MainWindow.xaml  MainWindow.xaml.cs  MonitoringService.cs  Program.cs  ProgramManagerService.cs
Desktop/Models/: CalibrationData.cs  Program.cs  ProgramStep.cs  SystemStatus.cs
Desktop/Properties/: AssemblyInfo.cs  Resources.resx  Settings.settings
Desktop/Services/: BooleanToVisibilityConverter.cs  IMonitoringService.cs  IProgramManagerService.cs  MonitoringService.cs  ProgramManagerService.cs  USBCommunicationService.cs
Desktop/Styles/: Colors.xaml
Desktop/ViewModels/: CalibrationViewModel.cs  MainViewModel.cs  MonitoringViewModel.cs  ProgramEditorViewModel.cs  RFControlViewModel.cs  SettingsViewModel.cs
Desktop/Views/: MainWindow.xaml  MainWindow.xaml.cs
Documentation/: API_REFERENCE.md  ARCHITECTURE.md  FIRMWARE_ARCHITECTURE.md  INSTALLATION.md  PROTOCOL.md  README.md  TROUBLESHOOTING.md  USER_MANUAL.md
Firmware/: CMakeLists.txt  Makefile.txt  README.md  linker.ld
Firmware/inc/: calibration.h  hal_adc.h  hal_gpio.h  hal_i2c.h  hal_uart.h  main.h  max2871.h
Firmware/src/: calibration.c  hal_adc.c  hal_gpio.c  hal_i2c.c  hal_uart.c  main.c  max2871.c  stm32h743_startup.s
Services/: IMonitoringService.cs  MonitoringService.cs
releases/: manifest.txt
